<resources>
    <string name="app_name">HomeworkNumberOne</string>
    <string name="hint">Enter the text</string>
    <string name="second_screen">Second screen</string>
    <string name="first_screen">First screen</string>
    <string name="third_screen">Third screen</string>
    <string name="the_entered_text">The entered text</string>
    <string name="first_fragment">First fragment</string>
    <string name="second_fragment">Second fragment</string>
    <string name="third_fragment">Third fragment</string>
    <string name="bottom_sheet">Bottom sheet</string>
    <string name="buttom_sheet">Buttom sheet</string>
    <string name="send">Send</string>
</resources>