<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="80dp"
        android:background="#FFEB3B"
        >

        <TextView
            android:id="@+id/tv_fragment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/first_fragment"
            android:textSize="24sp"
            android:textColor="#2196F3"
            android:fontFamily="sans-serif-smallcaps"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_to_second_screen"
        android:layout_marginHorizontal="32dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_to_second_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_to_third_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:text="@string/second_screen"
        android:backgroundTint="#2196F3"
        android:layout_marginHorizontal="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/button_to_third_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_to_bottom_sheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:text="@string/third_screen"
        android:backgroundTint="#2196F3"
        android:layout_marginHorizontal="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/button_to_bottom_sheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="64dp"
        android:text="@string/bottom_sheet"
        android:backgroundTint="#2196F3"
        android:layout_marginHorizontal="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>