<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="80dp"
        android:background="#8BC34A"
        >

        <TextView
            android:id="@+id/tv_buttom_sheet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/buttom_sheet"
            android:textSize="24sp"
            android:textColor="#2196F3"
            android:fontFamily="sans-serif-smallcaps"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_send_message"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:layout_marginHorizontal="32dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_in_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_send_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="64dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:backgroundTint="#2196F3"
        android:layout_marginHorizontal="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>